--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
 <!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
+    <title></title>
+  </head>
+  <body>
+    <form class="mainForm">
+      <input id="number" type="number" name="" value="">
+      <button id="submit" type="submit" name="button">Go</button>
+    </form>
+
+    <p>
+      <span id="result"></span>
+    </p>
+  </body>
+</html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
@@ -6,9 +27,16 @@
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
 
-    <title></title>
+    <title>Beep! Boop!</title>
   </head>
   <body>
+    <form class="mainForm">
+      <input id="number" type="number" name="" value="">
+      <button id="submit" type="submit" name="button">Go</button>
+    </form>
 
+    <p>
+      <span id="result"></span>
+    </p>
   </body>
-</html>
+</html> -->
