add bootstrap container

--- a/index.html
+++ b/index.html
@@ -9,34 +9,20 @@
     <title></title>
   </head>
   <body>
-    <form class="mainForm">
-      <input id="number" type="number" name="" value="">
-      <button id="submit" type="submit" name="button">Go</button>
-    </form>
+    <div class="container">
+      <h1>Beep! Boop!</h1>
+      <h3>Enter your number and check what the robot replies</h3>
+      <form class="mainForm">
+        <div class="form-group">
+          <label for="number">Your number:</label>
+          <input id="number" type="number" name="" value="">
+          <button id="submit" type="submit" name="button">Go</button>
+        </div>
+      </form>
 
-    <p>
-      <span id="result"></span>
-    </p>
+      <p>
+        <span id="result"></span>
+      </p>
+    </div>
   </body>
 </html>
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.3.1.js"></script>
-    <script src="js/scripts.js"></script>
-
-    <title>Beep! Boop!</title>
-  </head>
-  <body>
-    <form class="mainForm">
-      <input id="number" type="number" name="" value="">
-      <button id="submit" type="submit" name="button">Go</button>
-    </form>
-
-    <p>
-      <span id="result"></span>
-    </p>
-  </body>
-</html> -->
