--- a/index.html
+++ b/index.html
@@ -15,16 +15,23 @@
       <div class="input">
         <h3>Enter a number and check how the robot converts the numbers from 0 to yours.</h3>
         <form class="mainForm">
+
+          <div class="form-group">
+            <label for="name">Your name:</label>
+            <input id="name" type="text">
+          </div>
+
           <div class="form-group">
             <label for="number">Your number:</label>
-            <input id="number" type="number" name="" value="">
-            <button id="submit" type="submit" name="button">Go</button>
+            <input id="number" type="number">
           </div>
+
+          <button id="submit" type="submit" name="button">Go</button>
         </form>
       </div>
 
       <div class="result">
-        <h3>Here is the robot's reply</h3>
+        <h3><span class="name"></span>! Here is the robot's reply</h3>
         <p>
           <span id="result"></span>
         </p>
