--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="result">
-        <h3><span class="name"></span>! Here is the robot's reply</h3>
+        <h3><span class="name"></span>Here is the robot's reply</h3>
         <p>
           <span id="result"></span>
         </p>
