return results in unordered list

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Beep! Boop!</h1>
 
       <div class="input">
-        <h3>Enter a number and check how the robot converts the numbers from 0 to yours.</h3>
+        <h3>Enter a number and check how the numbers from 0 to yours will be converted.</h3>
         <form class="mainForm">
 
           <div class="form-group">
@@ -31,9 +31,11 @@
       </div>
 
       <div class="result">
-        <h3><span class="name"></span>Here is the robot's reply</h3>
+        <h3><span class="name"></span></h3>
+        <h3>Here is the result:</h3>
         <p>
           <span id="result"></span>
+          <ul></ul>
         </p>
         <button id="again" type="button" name="button">Again</button>
       </div>
