--- a/index.html
+++ b/index.html
@@ -10,34 +10,44 @@
   </head>
   <body>
     <div class="container">
-      <h1>Beep! Boop!</h1>
+      <div class="jumbotron">
+        <h1>Beep! Boop!</h1>
 
-      <div class="input">
-        <h3>Enter a number and check how the numbers from 0 to yours will be converted.</h3>
-        <form class="mainForm">
+        <div class="input">
+          <h3>Enter a number and check how the numbers from 0 to yours will be converted.</h3>
+          <form class="mainForm">
 
-          <div class="form-group">
-            <label for="name">Your name:</label>
-            <input id="name" type="text">
-          </div>
+            <div class="form-group">
+              <label for="name">Your name:</label>
+              <input id="name" type="text">
+            </div>
 
-          <div class="form-group">
-            <label for="number">Your number:</label>
-            <input id="number" type="number">
-          </div>
+            <div class="form-group">
+              <label for="number">Your number:</label>
+              <input id="number" type="number">
+            </div>
 
-          <button id="submit" type="submit" name="button">Go</button>
-        </form>
-      </div>
+            <div class="form-group">
+              <select class="form-control" id="showOptions">
+                <option value="1">Images and text</option>
+                <option value="2">Text only</option>
+                <option value="3">Images only</option>
+              </select>
+            </div>
 
-      <div class="result">
-        <h3><span class="name"></span></h3>
-        <h3>Here is the result:</h3>
-        <p>
-          <span id="result"></span>
-          <ul></ul>
-        </p>
-        <button id="again" type="button" name="button">Again</button>
+            <button id="submit" type="submit" name="button">Go</button>
+          </form>
+        </div>
+
+        <div class="result">
+          <h3><span class="name"></span></h3>
+          <h3>Here is the result:</h3>
+          <p>
+            <span id="result"></span>
+            <ul></ul>
+          </p>
+          <button id="again" type="button" name="button">Again</button>
+        </div>
       </div>
     </div>
   </body>
